was correction mobile adaptation

--- a/src/sass/base/_media.scss
+++ b/src/sass/base/_media.scss
@@ -65,6 +65,7 @@
         text-align: center;
         padding-right: 50px;
         padding-left: 50px;
+        background-position: -550px;
         &__wrapper {
             align-items: center;
         }
@@ -95,6 +96,7 @@
         }
     }
     .consultation {
+        background-position: -970px;
         padding: 50px 20px 50px 20px;
         &__descr {
             margin-top: 20px;
